[gd_scene load_steps=19 format=3 uid="uid://bvc4k72x5dugq"]

[ext_resource type="Script" path="res://scripts/levels/TileTest2.gd" id="1_x50ys"]
[ext_resource type="Texture2D" uid="uid://c0snlmb2r4unk" path="res://assets/tiles/atlas.png" id="2_isaqn"]
[ext_resource type="PackedScene" uid="uid://c24tpnc7epxp0" path="res://scenes/entities/Shoaldier.tscn" id="3_xyvwj"]
[ext_resource type="PackedScene" uid="uid://dqpasac6nkwwr" path="res://scenes/Elevator.tscn" id="4_d0gl2"]
[ext_resource type="PackedScene" uid="uid://dlhxihxddfn66" path="res://scenes/objects/Door.tscn" id="5_wcjfb"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_3385q"]
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_87v3n"]
polygon = PackedVector2Array(-24, 8, 8, 8, 8, -8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_g0akk"]
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_81aht"]
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_rj3e0"]
polygon = PackedVector2Array(-8, -8, -8, 8, 24, 8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_ml2t6"]
polygon = PackedVector2Array(-8, -8, 8, -8, -8, 8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_hkm3s"]
polygon = PackedVector2Array(8, -8, 8, 8, -8, 8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_63bdy"]
polygon = PackedVector2Array(-8, 8, -8, -8, 24, -8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_g31uc"]
polygon = PackedVector2Array(-8, -8, 8, 8, -8, 8)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_pqqks"]
polygon = PackedVector2Array(-24, -8, 8, -8, 8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_23kaw"]
texture = ExtResource("2_isaqn")
0:0/0 = 0
0:0/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_3385q")
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_1/angular_velocity = 0.0
1:0/0 = 0
1:0/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_g0akk")
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_1/angular_velocity = 0.0
2:0/0 = 0
2:0/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_81aht")
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8)
2:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_1/angular_velocity = 0.0
3:0/0 = 0
3:0/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_ml2t6")
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, -8, 8)
3:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_1/angular_velocity = 0.0
4:0/0 = 0
4:0/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_hkm3s")
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8)
4:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_1/angular_velocity = 0.0
5:0/0 = 0
5:0/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_g31uc")
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_1/angular_velocity = 0.0
0:1/size_in_atlas = Vector2i(2, 1)
0:1/0 = 0
0:1/0/texture_origin = Vector2i(8, 0)
0:1/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_87v3n")
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -24, 8)
0:1/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_1/angular_velocity = 0.0
2:1/size_in_atlas = Vector2i(2, 1)
2:1/0 = 0
2:1/0/texture_origin = Vector2i(-8, 0)
2:1/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_rj3e0")
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 24, 8)
2:1/0/physics_layer_1/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_1/angular_velocity = 0.0
4:1/size_in_atlas = Vector2i(2, 1)
4:1/0 = 0
4:1/0/texture_origin = Vector2i(-8, 0)
4:1/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_63bdy")
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, -8, 24, -8)
4:1/0/physics_layer_1/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_1/angular_velocity = 0.0
6:1/size_in_atlas = Vector2i(2, 1)
6:1/0 = 0
6:1/0/texture_origin = Vector2i(8, 0)
6:1/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_pqqks")
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, 8, -8, -24, -8)
6:1/0/physics_layer_1/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_1/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_1/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_1/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_1/angular_velocity = 0.0
1:2/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_vag4k"]
occlusion_layer_0/light_mask = 1
physics_layer_0/collision_layer = 21
physics_layer_1/collision_layer = 25
sources/0 = SubResource("TileSetAtlasSource_23kaw")

[sub_resource type="CircleShape2D" id="CircleShape2D_4itay"]
radius = 16.0

[node name="Level" type="Node2D"]
script = ExtResource("1_x50ys")

[node name="Backgrounds" type="TileMap" parent="."]
position = Vector2(-104, 376)
tile_set = SubResource("TileSet_vag4k")
format = 2
layer_0/tile_data = PackedInt32Array(-1572854, 0, 2, -1572858, 0, 2, -1572857, 0, 2, -1572856, 0, 2, -1572855, 0, 2, -1572859, 0, 2, -1638390, 0, 2, -1638391, 0, 2, -1638392, 0, 2, -1638393, 0, 2, -1638394, 0, 2, -1638395, 0, 2, -1638396, 0, 2, -1703933, 0, 2, -1703934, 0, 2, -1769471, 0, 2, -1769472, 0, 2, -1769473, 0, 2, -1769474, 0, 2, -1835013, 0, 2, -1900549, 0, 2, -1966085, 0, 2, -2031621, 0, 2, -1835012, 0, 2, -1835011, 0, 2, -1835010, 0, 2, -2031620, 0, 2, -2031619, 0, 2, -2031618, 0, 2, -2031617, 0, 2, -2097152, 0, 2, -2097151, 0, 2, -2097150, 0, 2, -2097149, 0, 2, -2097148, 0, 2, -2097147, 0, 2, -2097146, 0, 2, -2097145, 0, 2, -2097144, 0, 2, -2097143, 0, 2, -2097142, 0, 2, -2031606, 0, 2, -1966070, 0, 2, -1900534, 0, 2, -1834998, 0, 2, -1769462, 0, 2, -1703926, 0, 2, -1900538, 0, 2, -1966074, 0, 2, -2031610, 0, 2, -2031611, 0, 2, -2031612, 0, 2, -2031613, 0, 2, -2031614, 0, 2, -2031615, 0, 2, -2031616, 0, 2, -1966081, 0, 2, -1966082, 0, 2, -1966083, 0, 2, -1966084, 0, 2, -1900548, 0, 2, -1900547, 0, 2, -1900546, 0, 2, -1900545, 0, 2, -1835009, 0, 2, -1900544, 0, 2, -1966080, 0, 2, -1966079, 0, 2, -1900543, 0, 2, -1835007, 0, 2, -1835008, 0, 2, -1835006, 0, 2, -1900542, 0, 2, -1966078, 0, 2, -1966077, 0, 2, -1900541, 0, 2, -1835005, 0, 2, -1769469, 0, 2, -1769470, 0, 2, -1769468, 0, 2, -1835004, 0, 2, -1900540, 0, 2, -1966076, 0, 2, -1966075, 0, 2, -1900539, 0, 2, -1835003, 0, 2, -1769467, 0, 2, -1703931, 0, 2, -1703932, 0, 2, -1703930, 0, 2, -1769466, 0, 2, -1835002, 0, 2, -1835001, 0, 2, -1900537, 0, 2, -1966073, 0, 2, -2031609, 0, 2, -2031608, 0, 2, -1966072, 0, 2, -1900536, 0, 2, -1835000, 0, 2, -1769464, 0, 2, -1769465, 0, 2, -1703929, 0, 2, -1703928, 0, 2, -1703927, 0, 2, -1769463, 0, 2, -1834999, 0, 2, -1900535, 0, 2, -1966071, 0, 2, -2031607, 0, 2, -1835014, 0, 2, -1900550, 0, 2, -1966086, 0, 2, -2097159, 0, 2, -2031623, 0, 2, -1966087, 0, 2, -1900551, 0, 2, -1835015, 0, 2, -5767177, 0, 2, -5701641, 0, 2, -5636105, 0, 2, -5570569, 0, 2, -5505033, 0, 2, -5439497, 0, 2, -5373961, 0, 2, -5308425, 0, 2, -5242889, 0, 2, -5177353, 0, 2, -5111817, 0, 2, -5046281, 0, 2, -4980745, 0, 2, -4915209, 0, 2, -4849673, 0, 2, -4784137, 0, 2, -4718601, 0, 2, -4653065, 0, 2, -4587529, 0, 2, -4521993, 0, 2, -4456457, 0, 2, -4390921, 0, 2, -4325385, 0, 2, -4259849, 0, 2, -4194313, 0, 2, -4128777, 0, 2, -4063241, 0, 2, -3997705, 0, 2, -3932169, 0, 2, -3866633, 0, 2, -3801097, 0, 2, -3735561, 0, 2, -3670025, 0, 2, -3604489, 0, 2, -3538953, 0, 2, -3473417, 0, 2, -3407881, 0, 2, -3342345, 0, 2, -3276809, 0, 2, -3211273, 0, 2, -3145737, 0, 2, -3080201, 0, 2, -3014665, 0, 2, -2949129, 0, 2, -2883593, 0, 2, -2818057, 0, 2, -2752521, 0, 2, -2686985, 0, 2, -2621449, 0, 2, -2555913, 0, 2, -2490377, 0, 2, -2424841, 0, 2, -2359305, 0, 2, -2293769, 0, 2, -2228233, 0, 2, -2162697, 0, 2, -2097161, 0, 2, -2031625, 0, 2, -1966089, 0, 2, -1900553, 0, 2, -1835017, 0, 2, -5767176, 0, 2, -5701640, 0, 2, -5636104, 0, 2, -5570568, 0, 2, -5505032, 0, 2, -5439496, 0, 2, -5373960, 0, 2, -5308424, 0, 2, -5242888, 0, 2, -5177352, 0, 2, -5111816, 0, 2, -5046280, 0, 2, -4980744, 0, 2, -4915208, 0, 2, -4849672, 0, 2, -4784136, 0, 2, -4718600, 0, 2, -4653064, 0, 2, -4587528, 0, 2, -4521992, 0, 2, -4456456, 0, 2, -4390920, 0, 2, -4325384, 0, 2, -4259848, 0, 2, -4194312, 0, 2, -4128776, 0, 2, -4063240, 0, 2, -3997704, 0, 2, -3932168, 0, 2, -3866632, 0, 2, -3801096, 0, 2, -3735560, 0, 2, -3670024, 0, 2, -3604488, 0, 2, -3538952, 0, 2, -3473416, 0, 2, -3407880, 0, 2, -3342344, 0, 2, -3276808, 0, 2, -3211272, 0, 2, -3145736, 0, 2, -3080200, 0, 2, -3014664, 0, 2, -2949128, 0, 2, -2883592, 0, 2, -2818056, 0, 2, -2752520, 0, 2, -2686984, 0, 2, -2621448, 0, 2, -2555912, 0, 2, -2490376, 0, 2, -2424840, 0, 2, -2359304, 0, 2, -2293768, 0, 2, -2228232, 0, 2, -2162696, 0, 2, -2097160, 0, 2, -2031624, 0, 2, -1966088, 0, 2, -1900552, 0, 2, -1835016, 0, 2, -6357008, 0, 2, -6291472, 0, 2, -6225936, 0, 2, -6160400, 0, 2, -6094864, 0, 2, -6029328, 0, 2, -5963792, 0, 2, -5898256, 0, 2, -5832720, 0, 2, -6357007, 0, 2, -6291471, 0, 2, -6225935, 0, 2, -6160399, 0, 2, -6094863, 0, 2, -6029327, 0, 2, -5963791, 0, 2, -5898255, 0, 2, -5832719, 0, 2, -6357006, 0, 2, -6291470, 0, 2, -6225934, 0, 2, -6160398, 0, 2, -6094862, 0, 2, -6029326, 0, 2, -5963790, 0, 2, -5898254, 0, 2, -5832718, 0, 2, -6357005, 0, 2, -6291469, 0, 2, -6225933, 0, 2, -6160397, 0, 2, -6094861, 0, 2, -6029325, 0, 2, -5963789, 0, 2, -5898253, 0, 2, -5832717, 0, 2, -6357004, 0, 2, -6291468, 0, 2, -6225932, 0, 2, -6160396, 0, 2, -6094860, 0, 2, -6029324, 0, 2, -5963788, 0, 2, -5898252, 0, 2, -5832716, 0, 2, -6357003, 0, 2, -6291467, 0, 2, -6225931, 0, 2, -6160395, 0, 2, -6094859, 0, 2, -6029323, 0, 2, -5963787, 0, 2, -5898251, 0, 2, -5832715, 0, 2, -6357002, 0, 2, -6291466, 0, 2, -6225930, 0, 2, -6160394, 0, 2, -6094858, 0, 2, -6029322, 0, 2, -5963786, 0, 2, -5898250, 0, 2, -5832714, 0, 2, -6357001, 0, 2, -6291465, 0, 2, -6225929, 0, 2, -6160393, 0, 2, -6094857, 0, 2, -6029321, 0, 2, -5963785, 0, 2, -5898249, 0, 2, -5832713, 0, 2, -6357000, 0, 2, -6291464, 0, 2, -6225928, 0, 2, -6160392, 0, 2, -6094856, 0, 2, -6029320, 0, 2, -5963784, 0, 2, -5898248, 0, 2, -5832712, 0, 2, -6356999, 0, 2, -6291463, 0, 2, -6225927, 0, 2, -6160391, 0, 2, -6094855, 0, 2, -6029319, 0, 2, -5963783, 0, 2, -5898247, 0, 2, -5832711, 0, 2, -6356998, 0, 2, -6291462, 0, 2, -6225926, 0, 2, -6160390, 0, 2, -6094854, 0, 2, -6029318, 0, 2, -5963782, 0, 2, -5898246, 0, 2, -5832710, 0, 2, -6356997, 0, 2, -6291461, 0, 2, -6225925, 0, 2, -6160389, 0, 2, -6094853, 0, 2, -6029317, 0, 2, -5963781, 0, 2, -5898245, 0, 2, -5832709, 0, 2, -6356996, 0, 2, -6291460, 0, 2, -6225924, 0, 2, -6160388, 0, 2, -6094852, 0, 2, -6029316, 0, 2, -5963780, 0, 2, -5898244, 0, 2, -5832708, 0, 2, -6356995, 0, 2, -6291459, 0, 2, -6225923, 0, 2, -6160387, 0, 2, -6094851, 0, 2, -6029315, 0, 2, -5963779, 0, 2, -5898243, 0, 2, -5832707, 0, 2, -6356994, 0, 2, -6291458, 0, 2, -6225922, 0, 2, -6160386, 0, 2, -6094850, 0, 2, -6029314, 0, 2, -5963778, 0, 2, -5898242, 0, 2, -5832706, 0, 2, -6356993, 0, 2, -6291457, 0, 2, -6225921, 0, 2, -6160385, 0, 2, -6094849, 0, 2, -6029313, 0, 2, -5963777, 0, 2, -5898241, 0, 2, -5832705, 0, 2, -6422528, 0, 2, -6356992, 0, 2, -6291456, 0, 2, -6225920, 0, 2, -6160384, 0, 2, -6094848, 0, 2, -6029312, 0, 2, -5963776, 0, 2, -5898240, 0, 2, -6422527, 0, 2, -6356991, 0, 2, -6291455, 0, 2, -6225919, 0, 2, -6160383, 0, 2, -6094847, 0, 2, -6029311, 0, 2, -5963775, 0, 2, -5898239, 0, 2, -6422526, 0, 2, -6356990, 0, 2, -6291454, 0, 2, -6225918, 0, 2, -6160382, 0, 2, -6094846, 0, 2, -6029310, 0, 2, -5963774, 0, 2, -5898238, 0, 2, -6422525, 0, 2, -6356989, 0, 2, -6291453, 0, 2, -6225917, 0, 2, -6160381, 0, 2, -6094845, 0, 2, -6029309, 0, 2, -5963773, 0, 2, -5898237, 0, 2, -6422524, 0, 2, -6356988, 0, 2, -6291452, 0, 2, -6225916, 0, 2, -6160380, 0, 2, -6094844, 0, 2, -6029308, 0, 2, -5963772, 0, 2, -5898236, 0, 2, -6422523, 0, 2, -6356987, 0, 2, -6291451, 0, 2, -6225915, 0, 2, -6160379, 0, 2, -6094843, 0, 2, -6029307, 0, 2, -5963771, 0, 2, -5898235, 0, 2, -6815760, 0, 2, -6750224, 0, 2, -6684688, 0, 2, -6619152, 0, 2, -6553616, 0, 2, -6488080, 0, 2, -6422544, 0, 2, -6815759, 0, 2, -6750223, 0, 2, -6684687, 0, 2, -6619151, 0, 2, -6553615, 0, 2, -6488079, 0, 2, -6422543, 0, 2, -6815758, 0, 2, -6750222, 0, 2, -6684686, 0, 2, -6619150, 0, 2, -6553614, 0, 2, -6488078, 0, 2, -6422542, 0, 2, -6815757, 0, 2, -6750221, 0, 2, -6684685, 0, 2, -6619149, 0, 2, -6553613, 0, 2, -6488077, 0, 2, -6422541, 0, 2, -6815756, 0, 2, -6750220, 0, 2, -6684684, 0, 2, -6619148, 0, 2, -6553612, 0, 2, -6488076, 0, 2, -6422540, 0, 2, -6815755, 0, 2, -6750219, 0, 2, -6684683, 0, 2, -6619147, 0, 2, -6553611, 0, 2, -6488075, 0, 2, -6422539, 0, 2, -6815754, 0, 2, -6750218, 0, 2, -6684682, 0, 2, -6619146, 0, 2, -6553610, 0, 2, -6488074, 0, 2, -6422538, 0, 2, -6815753, 0, 2, -6750217, 0, 2, -6684681, 0, 2, -6619145, 0, 2, -6553609, 0, 2, -6488073, 0, 2, -6422537, 0, 2, -6815752, 0, 2, -6750216, 0, 2, -6684680, 0, 2, -6619144, 0, 2, -6553608, 0, 2, -6488072, 0, 2, -6422536, 0, 2, -6815751, 0, 2, -6750215, 0, 2, -6684679, 0, 2, -6619143, 0, 2, -6553607, 0, 2, -6488071, 0, 2, -6422535, 0, 2, -6815750, 0, 2, -6750214, 0, 2, -6684678, 0, 2, -6619142, 0, 2, -6553606, 0, 2, -6488070, 0, 2, -6422534, 0, 2, -6815749, 0, 2, -6750213, 0, 2, -6684677, 0, 2, -6619141, 0, 2, -6553605, 0, 2, -6488069, 0, 2, -6422533, 0, 2, -6815748, 0, 2, -6750212, 0, 2, -6684676, 0, 2, -6619140, 0, 2, -6553604, 0, 2, -6488068, 0, 2, -6422532, 0, 2, -6815747, 0, 2, -6750211, 0, 2, -6684675, 0, 2, -6619139, 0, 2, -6553603, 0, 2, -6488067, 0, 2, -6422531, 0, 2, -6815746, 0, 2, -6750210, 0, 2, -6684674, 0, 2, -6619138, 0, 2, -6553602, 0, 2, -6488066, 0, 2, -6422530, 0, 2, -6815745, 0, 2, -6750209, 0, 2, -6684673, 0, 2, -6619137, 0, 2, -6553601, 0, 2, -6488065, 0, 2, -6422529, 0, 2, -6881280, 0, 2, -6815744, 0, 2, -6750208, 0, 2, -6684672, 0, 2, -6619136, 0, 2, -6553600, 0, 2, -6488064, 0, 2, -6881279, 0, 2, -6815743, 0, 2, -6750207, 0, 2, -6684671, 0, 2, -6619135, 0, 2, -6553599, 0, 2, -6488063, 0, 2, -6881278, 0, 2, -6815742, 0, 2, -6750206, 0, 2, -6684670, 0, 2, -6619134, 0, 2, -6553598, 0, 2, -6488062, 0, 2, -6881277, 0, 2, -6815741, 0, 2, -6750205, 0, 2, -6684669, 0, 2, -6619133, 0, 2, -6553597, 0, 2, -6488061, 0, 2, -6881276, 0, 2, -6815740, 0, 2, -6750204, 0, 2, -6684668, 0, 2, -6619132, 0, 2, -6553596, 0, 2, -6488060, 0, 2, -6881275, 0, 2, -6815739, 0, 2, -6750203, 0, 2, -6684667, 0, 2, -6619131, 0, 2, -6553595, 0, 2, -6488059, 0, 2)

[node name="Entities" type="Node2D" parent="."]
position = Vector2(-104, 376)

[node name="Shoaldier" parent="Entities" instance=ExtResource("3_xyvwj")]
position = Vector2(-492, -1409)

[node name="Hitboxes" type="TileMap" parent="."]
light_mask = 2
z_index = 1
position = Vector2(-104, 376)
tile_set = SubResource("TileSet_vag4k")
format = 2
layer_0/tile_data = PackedInt32Array(-1507334, 65536, 0, -1507330, 65536, 0, -1507331, 65536, 0, -1507332, 65536, 0, -1507333, 65536, 0, -1507329, 65536, 0, -1572864, 65536, 0, -1572863, 65536, 0, -1572862, 65536, 0, -1572861, 65536, 0, -1572860, 65536, 0, -1572853, 65536, 0, -1638389, 65536, 0, -1703925, 65536, 0, -1769461, 65536, 0, -1834997, 65536, 0, -1900533, 65536, 0, -1572870, 65536, 0, -1638406, 65536, 0, -1703942, 65536, 0, -1769478, 65536, 0, -1572859, 196608, 0, -1638396, 131072, 1, -1703934, 131072, 1, -1769472, 131072, 1, -1769474, 131072, 1, -1769475, 65536, 0, -1769476, 65536, 0, -1769477, 65536, 0, -2031622, 65536, 0, -2097158, 65536, 0, -2162677, 327680, 0, -1966069, 65536, 0, -2031605, 65536, 0, -2097141, 65536, 0, -2162678, 65536, 0, -2162679, 65536, 0, -2162680, 65536, 0, -2162681, 65536, 0, -2162682, 65536, 0, -2162683, 65536, 0, -2162684, 65536, 0, -2162685, 65536, 0, -2162686, 65536, 0, -2162687, 65536, 0, -2162688, 65536, 0, -2097153, 65536, 0, -2097154, 65536, 0, -2097157, 65536, 0, -2097156, 65536, 0, -2097155, 65536, 0, -1638397, 65536, 0, -1638398, 65536, 0, -1638399, 65536, 0, -1638400, 65536, 0, -1572865, 65536, 0, -1572866, 65536, 0, -1572867, 65536, 0, -1572868, 65536, 0, -1572869, 65536, 0, -1638405, 65536, 0, -1703941, 65536, 0, -1703940, 65536, 0, -1703939, 65536, 0, -1703938, 65536, 0, -1703937, 65536, 0, -1638402, 65536, 0, -1638403, 65536, 0, -1638404, 65536, 0, -1703936, 65536, 0, -1638401, 65536, 0, -1703935, 65536, 0, -2097159, 131072, 0, -2162695, 65536, 0, -2228231, 65536, 0, -2293767, 65536, 0, -2359303, 65536, 0, -2424839, 65536, 0, -2162698, 65536, 0, -2097162, 65536, 0, -2031626, 65536, 0, -1966090, 65536, 0, -1900554, 65536, 0, -1835018, 65536, 0, -1769481, 65536, 0, -1769480, 65536, 0, -1769479, 65536, 0, -1703943, 131072, 0, -1769482, 131072, 0, -2228234, 65536, 0, -2293770, 65536, 0, -2359306, 65536, 0, -2424842, 65536, 0, -2490378, 65536, 0, -2555914, 65536, 0, -2621450, 65536, 0, -2686986, 65536, 0, -2752522, 65536, 0, -2818058, 65536, 0, -2883594, 65536, 0, -2949130, 65536, 0, -3014666, 65536, 0, -3080202, 65536, 0, -3145738, 65536, 0, -3211274, 65536, 0, -3276810, 65536, 0, -3342346, 65536, 0, -3407882, 65536, 0, -3473418, 65536, 0, -3538954, 65536, 0, -3604490, 65536, 0, -3670026, 65536, 0, -3735562, 65536, 0, -3801098, 65536, 0, -3866634, 65536, 0, -3932170, 65536, 0, -3997706, 65536, 0, -4063242, 65536, 0, -4128778, 65536, 0, -4194314, 65536, 0, -4259850, 65536, 0, -4325386, 65536, 0, -4390922, 65536, 0, -4456458, 65536, 0, -4521994, 65536, 0, -4587530, 65536, 0, -2490375, 65536, 0, -2555911, 65536, 0, -2621447, 65536, 0, -2686983, 65536, 0, -2752519, 65536, 0, -2818055, 65536, 0, -2883591, 65536, 0, -2949127, 65536, 0, -3014663, 65536, 0, -3080199, 65536, 0, -3145735, 65536, 0, -3211271, 65536, 0, -3276807, 65536, 0, -3342343, 65536, 0, -3407879, 65536, 0, -3473415, 65536, 0, -3538951, 65536, 0, -3604487, 65536, 0, -3670023, 65536, 0, -3735559, 65536, 0, -3801095, 65536, 0, -3866631, 65536, 0, -3932167, 65536, 0, -3997703, 65536, 0, -4063239, 65536, 0, -4128775, 65536, 0, -4194311, 65536, 0, -4259847, 65536, 0, -4325383, 65536, 0, -4390919, 65536, 0, -4456455, 65536, 0, -4521991, 65536, 0, -4587527, 65536, 0, -4653066, 65536, 0, -4718602, 65536, 0, -4784138, 65536, 0, -4849674, 65536, 0, -4915210, 65536, 0, -4980746, 65536, 0, -5046282, 65536, 0, -5111818, 65536, 0, -5177354, 65536, 0, -5242890, 65536, 0, -5308426, 65536, 0, -5373962, 65536, 0, -5439498, 65536, 0, -5505034, 65536, 0, -5570570, 65536, 0, -5636106, 65536, 0, -5701642, 65536, 0, -5767178, 65536, 0, -4653063, 65536, 0, -4718599, 65536, 0, -4784135, 65536, 0, -4849671, 65536, 0, -4915207, 65536, 0, -4980743, 65536, 0, -5046279, 65536, 0, -5111815, 65536, 0, -5177351, 65536, 0, -5242887, 65536, 0, -5308423, 65536, 0, -5373959, 65536, 0, -5439495, 65536, 0, -5505031, 65536, 0, -5570567, 65536, 0, -5636103, 65536, 0, -5701639, 65536, 0, -5767175, 65536, 0, -5701638, 196608, 0, -5701643, 131072, 0, -5767179, 65536, 0, -5767180, 65536, 0, -5767181, 65536, 0, -5767182, 65536, 0, -5767183, 65536, 0, -5767184, 65536, 0, -5767174, 65536, 0, -5767173, 65536, 0, -5767172, 65536, 0, -5767171, 65536, 0, -5767170, 65536, 0, -5767169, 65536, 0, -5767185, 131072, 0, -5832721, 65536, 2, -5898257, 65536, 2, -5963793, 65536, 2, -6029329, 65536, 2, -6094865, 65536, 2, -6160401, 65536, 2, -6225937, 65536, 2, -6291473, 65536, 2, -6357009, 65536, 2, -5832704, 65536, 0, -5832703, 65536, 0, -5832702, 65536, 0, -5832701, 65536, 0, -5832700, 65536, 0, -5832699, 65536, 0, -6422545, 65536, 2, -6488081, 65536, 2, -6553617, 65536, 2, -6619153, 65536, 2, -6684689, 65536, 2, -6750225, 65536, 2, -6815761, 65536, 2, -6881297, 262144, 0, -6881296, 65536, 0, -6881295, 65536, 0, -6881294, 65536, 0, -6881293, 65536, 0, -6881292, 65536, 0, -6881291, 65536, 0, -6881290, 65536, 0, -6881289, 65536, 0, -6881288, 65536, 0, -6881287, 65536, 0, -6881286, 65536, 0, -6881285, 65536, 0, -6881284, 65536, 0, -6881283, 65536, 0, -6881282, 65536, 0, -6881281, 65536, 0, -6946816, 65536, 0, -6946815, 65536, 0, -6946814, 65536, 0, -6946813, 65536, 0, -6946812, 65536, 0, -6946811, 65536, 0, -5570594, 0, 0, -5570593, 0, 0, -5570592, 0, 0, -5570591, 0, 0, -5570590, 0, 0, -5570588, 0, 0, -5570589, 0, 0, -5505058, 0, 0, -5505053, 0, 0, -5439521, 0, 0, -5373985, 0, 0, -5373982, 0, 0, -5308446, 0, 0, -5308448, 0, 0, -5242911, 0, 0, -5505052, 0, 0, -5439517, 0, 0, -5373981, 0, 0, -5242910, 0, 0, -5177374, 0, 0, -5177375, 0, 0, -5111839, 0, 0, -5308447, 0, 0, -5373983, 0, 0, -5439519, 0, 0, -5505055, 0, 0, -5505056, 0, 0, -5505057, 0, 0, -5439520, 0, 0, -5373984, 0, 0, -5439518, 0, 0, -5505054, 0, 0, -5570587, 262144, 1, -5570595, 393216, 1, -5636132, 262144, 0, -5636122, 327680, 0, -5636131, 65536, 0, -5636130, 65536, 0, -5636129, 65536, 0, -5636128, 65536, 0, -5636127, 65536, 0, -5636126, 65536, 0, -5636125, 65536, 0, -5636124, 65536, 0, -5636123, 65536, 0)

[node name="Spawn" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(-165, -99)

[node name="Exit" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(40, -173)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
shape = SubResource("CircleShape2D_4itay")

[node name="Door1" parent="." instance=ExtResource("5_wcjfb")]
unique_name_in_owner = true
position = Vector2(-192, -95)
scale = Vector2(1, -1)
collision_layer = 21
speed = 1.5

[node name="Door2" parent="." instance=ExtResource("5_wcjfb")]
unique_name_in_owner = true
position = Vector2(23, 0)
rotation = -1.57079
scale = Vector2(1, 2)
collision_layer = 21
speed = 1.5

[node name="Slopes" type="Node2D" parent="."]
z_index = 1
position = Vector2(-104, 376)

[node name="Elevator" parent="." instance=ExtResource("4_d0gl2")]
position = Vector2(-232, -559)
scale = Vector2(0.52, 15.24)
speed = 500

[node name="Door3" parent="." instance=ExtResource("5_wcjfb")]
unique_name_in_owner = true
position = Vector2(-233, -1041)
rotation = -1.57079
scale = Vector2(1, 0.69)
collision_layer = 21
target_state = 1
speed = 2.0

[connection signal="body_entered" from="Exit" to="." method="_on_exit_body_entered"]
[connection signal="body_exited" from="Elevator" to="." method="_on_elevator_body_exited"]
